--- a/style.css
+++ b/style.css
@@ -310,7 +310,8 @@ main #about-me {
   }
 
   .exp {
-    height: 460px;
+    width: 50%;
+    height: 350px;
     gap: 5px;
   }
 
@@ -318,7 +319,7 @@ main #about-me {
     font-size: 20px;
   }
   .exp p {
-    font-size: 11px;
+    font-size: 12px;
   }
 }
 
